fixing broken style

--- a/evaluation/style.css
+++ b/evaluation/style.css
@@ -8,24 +8,6 @@
   font-family: "Poppins", sans-serif;
 }
 
-/* body {
-  text-align: center;
-  background: rgba(0, 0, 0, 0.7);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  padding: 2rem;
-}
-
-h1 {
-  color: #fefefe;
-  font-family: "Sigmar", cursive;
-  -webkit-text-stroke: 0.05rem black;
-  font-size: 3rem;
-} */
-
 body {
   text-align: center;
   background: rgba(0, 0, 0, 0.7);
@@ -35,7 +17,6 @@ body {
   align-items: center;
   height: 100vh;
   padding: 3rem 2rem 2rem; 
-  /* overflow: hidden; */
 }
 
 h1 {
@@ -46,6 +27,10 @@ h1 {
   margin-top: 2rem; 
   max-width: 90%;
   word-wrap: break-word;
+}
+
+#start{
+  margin: 5rem;
 }
 
 h2 {
